...
    <string name="unaply_text">UNAPPLY</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="send_comment_icon">send_comment_icon</string>
    <string name="march_11">March 11</string>
    <string name="hello_how_are_you">Hello! How are you?</string>

    <string name="edit_button">Edit</string>

    <string name="cv_display_cv_null">The cv is null.</string>
    <string name="cv_display_title">CurriculumVitae</string>
    <string name="cv_display_summary_title">Summary</string>
    <string name="cv_display_item_language">Language : %s</string>
    <string name="cv_display_item_level">Level : %s</string>
...
