<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/filter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/filter"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/filter_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/filter_settings_icon"
                android:src="@drawable/ic_baseline_settings_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/filter_preferences_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:text="@string/preferences"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter_preferences_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:id="@+id/space"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/filter_master"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="48dp"
                android:text="@string/master"
                app:layout_constraintStart_toEndOf="@+id/space"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/filter_applied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="48dp"
                android:text="@string/applied"
                app:layout_constraintEnd_toEndOf="@+id/space"
                app:layout_constraintHorizontal_bias="0.43"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_bachelor" />

            <CheckBox
                android:id="@+id/filter_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="48dp"
                android:text="@string/filter_favorites"
                app:layout_constraintStart_toEndOf="@+id/space"
                app:layout_constraintTop_toBottomOf="@+id/filter_master" />

            <CheckBox
                android:id="@+id/filter_own"
                android:layout_width="113dp"
                android:layout_height="45dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="48dp"
                android:text="@string/filter_own_projects"
                app:layout_constraintEnd_toEndOf="@+id/space"
                app:layout_constraintHorizontal_bias="0.698"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_bachelor" />

            <CheckBox
                android:id="@+id/filter_bachelor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="48dp"
                android:text="@string/bachelor"
                app:layout_constraintEnd_toStartOf="@+id/space"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/preferences_layout_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/filter_pref_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/submission"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</ScrollView>